--- a/src/blocks/home.css
+++ b/src/blocks/home.css
@@ -28,7 +28,13 @@
     margin: 20px 0;
 }
 
-.blog-details button {
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.buttons button {
     background: #f1356d;
     color: #fff;
     border: 0;
